Fix h2 to align left

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,10 @@ body {
   text-align: center;
 }
 h1 {
-  
+  text-align: left;
+}
+h2 {
+  text-align: center
 }
 
 /*BOX FOR COLOUR GUIDE*/
